# ssh-vpn-gui

./: .gitignore  LICENSE  README.md  pyproject.toml  routing.cfg  setup.py  ssh-vpn-gui.desktop
debian/: changelog  com.ssh-vpn-gui.helper.policy  control  copyright  rules  ssh-vpn-gui.dirs  ssh-vpn-gui.install
scripts/: install-desktop-file.sh  install-polkit-rule.sh  install-sudoers-rule.sh  uninstall-polkit-rule.sh  uninstall-sudoers-rule.sh
src/ssh_vpn_gui/: __init__.py  app.py  dns_proxy.py  geoip.py  geosite.py  helper.py  paths.py  routing_config.py  routing_engine.py  singbox.py  ssh_tunnel.py  system.py  tunnel_daemon.py
tests/: test_app.py  test_dns_proxy.py  test_geosite.py  test_helper.py  test_routing_config.py  test_singbox.py  test_ssh_tunnel.py
